// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading overview 1 snapshot 1`] = `
<DocumentFragment>
  <h4
    class="css-1wf7gym"
  >
    heading text
  </h4>
</DocumentFragment>
`;

exports[`Heading overview 2 snapshot 1`] = `
<DocumentFragment>
  <h3
    class="css-1wf7gym"
  >
    heading text
  </h3>
</DocumentFragment>
`;

exports[`Heading overview 3 snapshot 1`] = `
<DocumentFragment>
  <h1
    class="css-1wf7gym"
  >
    heading text
  </h1>
</DocumentFragment>
`;

exports[`Heading overview 4 snapshot 1`] = `
<DocumentFragment>
  <h3
    class="css-1wf7gym"
  >
    heading text
  </h3>
</DocumentFragment>
`;

exports[`Heading overview 5 snapshot 1`] = `
<DocumentFragment>
  <h4
    class="css-1wf7gym"
  >
    heading text
  </h4>
</DocumentFragment>
`;
